sandbox/output
NumberParser.java:5: error: ']' expected
        int result[arr.size()] = {};
                   ^
NumberParser.java:5: error: illegal start of expression
        int result[arr.size()] = {};
                      ^
NumberParser.java:5: error: ';' expected
        int result[arr.size()] = {};
                           ^
3 errors
